# Dominate

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
docs/: SPEC.md  index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check.bat  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V001__initial.sql  V002__seed_defaults.sql  V003__courses.sql  V004__seed_courses.sql
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/actions/: app_file.rs  control_flow.rs  lua_script.rs  media_input.rs  mod.rs  notification.rs  registry.rs  system_power.rs
src-tauri/src/commands/: actions.rs  courses.rs  db.rs  execution.rs  flows.rs  mod.rs  settings.rs  test.rs  triggers.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  repository.rs
src-tauri/src/executor/: chain.rs  mod.rs
src-tauri/src/models/: action.rs  common.rs  course.rs  flow.rs  log.rs  mod.rs  semester.rs  setting.rs  trigger.rs
src-tauri/src/triggers/: cron.rs  manual.rs  mod.rs  scheduler.rs  system_event.rs
src/components/: Layout.tsx  Sidebar.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  select.tsx
src/lib/: tauri.ts  utils.ts
src/pages/: Home.tsx  Performance.tsx  QuickActions.tsx  Settings.tsx  Timeline.tsx
src/pages/home/: QuickActionsPanel.tsx  RecentLogs.tsx  SystemStatus.tsx  TodayTasks.tsx
src/pages/timeline/: CourseActionMenu.tsx  CourseBlock.tsx  CourseFormDialog.tsx  DayView.tsx  MonthView.tsx  OverrideDialog.tsx  TimelineDndContext.tsx  TimelineToolbar.tsx  WeekView.tsx  useLongPress.ts  utils.ts
src/stores/: app.ts  timeline.ts
