[package]
name = "dominate"
version = "0.4.0-alpha.1"
description = "Dominate - 个人自动化助手"
authors = ["Dominate"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dominate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-stream = "0.3"

# 错误处理
anyhow = "1"
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# 数据库
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Lua 引擎
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

# 时间与调度
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# 工具库
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
parking_lot = "0.12"
dashmap = "6"
once_cell = "1"
regex = "1"
url = "2"
open = "5"

# Windows API
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_EventLog",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Media_Audio",
    "Win32_Storage_FileSystem",
] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Notifications",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_Media_Audio",
    "Foundation",
    "Foundation_Collections",
    "Data_Xml_Dom",
    "UI_Notifications",
] }
winreg = "0.52"

# 系统信息
sysinfo = "0.32"

# HTTP 请求（用于更新检查与 Lua 脚本市场）
reqwest = { version = "0.12", features = ["json", "stream"] }

# 压缩（用于导入导出）
zip = "2"

[features]
# 默认特性
default = []
# 调试模式特性（Release 可选启用）
debug-mode = []
